--- a/server/package.json
+++ b/server/package.json
@@ -4,7 +4,7 @@
   "description": "mevn app for cps74",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon server.js"
+    "server": "nodemon server.js"
   },
   "author": "Kalinin A",
   "license": "ISC",
